# aoc2021

./: .ccls  .gitignore  CMakeLists.txt  README.md  Taskfile.yml  aoc  main.cpp
days/: day1.cpp  day1.hpp  day10.cpp  day10.hpp  day11.cpp  day11.hpp  day12.cpp  day12.hpp  day13.cpp  day13.hpp  day14.cpp  day14.hpp  day15.cpp  day15.hpp  day16.cpp  day16.hpp  day2.cpp  day2.hpp  day3.cpp  day3.hpp  day4.cpp  day4.hpp  day5.cpp  day5.hpp  day6.cpp  day6.hpp  day7.cpp  day7.hpp  day8.cpp  day8.hpp  day9.cpp  day9.hpp
input/: test.txt
utils/: file.cpp  file.hpp
